Bug 646194 - Fix the bound checking when deleting previous words to prevent crashes when the caret is at the beginning of an editable area; r=roc